pkg/i2gw/providers/openapi3/fixtures/input/3-parameters.yaml
openapi: 3.0.2
info:
  title: Sample API
  version: 1.0.0
paths:
  /resources:
    parameters:
    - name: digest
      in: header
      required: true
      schema:
        type: string
    post:
      operationId: createResource
      responses:
        "200":
          description: Successful operation
        "400":
          description: Invalid name supplied
    get:
      operationId: listResources
      parameters: # overrides upper level parameters
      - name: q
        in: query
        required: true
        schema:
          type: string
        allowEmptyValue: true
      - name: page
        in: query
        required: false # ignored
        schema:
          type: string
      responses:
        "200":
          description: Successful operation
  /resource/{id}:
    parameters:
    - name: id
      in: path # ignored
      required: true
      schema:
        type: integer
        format: int64
    get:
      operationId: readResource
      parameters:
      - name: id
        in: path # ignored
        required: true
        schema:
          type: integer
          format: int64
      responses:
        "200":
          description: Successful operation
        "400":
          description: Invalid ID supplied
        "404":
          description: Resource not found
