pkg/i2gw/providers/openapi3/fixtures/input/6-reference-grants.yaml
openapi: 3.0.2
info:
  title: Sample API
  version: 1.0.0
servers:
- url: "https://api.example.com"
paths:
  /resources:
    post:
      operationId: createResource
      responses:
        "200":
          description: Successful operation
